--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body><center>
     <h1>Table Generator</h1>
-    <input type="number" name="" id="input">
-    <button type="submit">Calculate</button>
-
+    <input type="number" name="" id="number">
+    <button onclick="generateTable()">Calculate</button>
+</center>
     
 </body>
 </html>
