--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body><center>
     <h1>Table Generator</h1>
-    <input type="number" name="" id="number">
+    <input type="number" name="" id="number"><br>
     <button onclick="generateTable()">Calculate</button>
+    <br><hr>
+
+
+
 </center>
-    
 </body>
 </html>
