--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body><center>
-    <h1>Table Generator</h1>
+    <h1 class="heading">Table Generator</h1>
     <input type="number" name="" id="number"><br>
     <button onclick="generateTable()">Calculate</button>
     <br><hr>
