i added animations and styles and responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><center>
+<body><div class="container"><center>
     <h1 class="heading">Table Generator</h1>
     <input type="number" name="" id="number"><br>
     <button onclick="generateTable()">Calculate</button>
@@ -15,6 +15,7 @@
 <div id="display"></div>
 
 </center>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
